--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
                 <h1>
                     Hi 👋🏼 I'm <a href="#">Prathmesh Rathod,</a><br>
-                    ML Engineer w/ love for data<br>
-                    based in Urbana, IL
+                    Researcher & Engineer<br> w/ love for data<br>
+                    
                 </h1>
                 
 
@@ -170,7 +170,7 @@
 
                     <h2 data-aos="fade-up">About Me</h2><br>
                     <p data-aos="fade-up">
-                        I'm completing my MS in Industrial Engineering from University of Illinois at Urbana-Champaign. I have a strong backgrounds and interests in areas such as optimization, learning theory, reinforcement learning, and data-driven control.
+                        I'm completing my MS in Industrial Engineering from University of Illinois at Urbana-Champaign. I have a strong background and interests in areas of optimization, learning theory, reinforcement learning, and data-driven control.<br>
                         After specializing in Advance Analytics Concentration, I thought, "Why not teach machines to learn so I can take longer coffee breaks?" 
                         During my studies, I dove into projects involving neural networks and AI—turns out, machines appreciate data even more than I appreciate a good pizza.
                         Previously, I was at Suraj industries, collaborating with industry veterans and sharpening my technical skills—and my wit. Worked on diverse projects that boosted 
@@ -182,9 +182,11 @@
                             • <b>Programming Languages:</b> Python, Java, SQL, R, Bash<br>
                             • <b>Core Frameworks:</b> PyTorch, Keras, TensorFlow, Transformers<br>
                             • <b>Transformers & NLP:</b> Hugging Face Transformers, spaCy, NLTK<br>
-                            • <b>Cloud & CI/CD:</b> AWS, Terraform, Docker, Kubernetes, Jenkins, Ansible<br>
+                            • <b>Cloud & CI/CD:</b> AWS, Terraform, Docker, Kubernetes, Jenkins<br>
                             • <b>Distributed Systems:</b> Spark, Hadoop, Hive, Kafka, Flink, ETL, HDFS<br>
                             • <b>Data Processing & Analysis:</b> Pandas, NumPy, Dask, Apache Arrow, Matplotlib, Seaborn<br>
+                            • <b>Continuous Improvement:</b> Lean Six Sigma, 5S, Root Cause Analysis, FMEA<br>
+                            • <b>Supply Chain & Operations:</b> Supply Chain Management, Inventory & Demand Planning<br>
  
                         <br>
                         <a href="https://www.linkedin.com/in/prathmesh-rathod">more ➜</a>
@@ -492,7 +494,7 @@
                 </div>
 
                 <p class="lead" data-aos="fade-up">
-                    As a Machine Learning Engineer, I build systems that don't just work—they learn and evolve. 
+                    <!--As a Machine Learning Engineer,--> I build systems that don't just work—they learn and evolve. 
                     With a solid grasp of software, data, and infrastructure, I love turning complex problems into 
                     innovative, scalable solutions that actually make a difference.
                 </p>
@@ -603,7 +605,7 @@
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Machine Learning</div>
+                        <div class="folio-item__cat">HFT</div>
                         <h4 class="folio-item__title">OneTick Database in Lab</h4>
                     </div>
                     <a href="https://gitlab.engr.illinois.edu/ie421_high_frequency_trading_spring_2024/ie421_hft_spring_2024_group_03/group_03_project" target="_blank" title="Project Link" class="folio-item__project-link">Project
@@ -614,25 +616,25 @@
                 </div>
             </div><!-- end column -->
 
-<!--
+
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/distsys.jpg" Title="Jayesh UX Logo"
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/Health copy.png" Title="Jayesh UX Logo"
                             data-size="1050x700">
-                            <img src="images/portfolio/gallery/neural.jpeg"
-                                srcset="images/portfolio/gallery/distsys.jpg, images/portfolio/distsys.jpg" alt="">
+                            <img src="images/portfolio/gallery/Health copy.png"
+                                srcset="images/portfolio/gallery/Health copy.png, images/portfolio/Health.png" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Distributed Systems</div>
-                        <h4 class="folio-item__title">Distributed Key-Value Storage</h4>
+                        <div class="folio-item__cat">Database Systems</div>
+                        <h4 class="folio-item__title">HealthGuide</h4>
                     </div>
-                    <a href="https://github.com/JayeshSuryavanshi/Distributed-Key-Value-Store" target="_blank" title="Project Link" class="folio-item__project-link">Project
+                    <a href="https://github.com/Prathmesh-Rathod/HealthGuide" target="_blank" title="Project Link" class="folio-item__project-link">Project
                         Link</a>
                     <div class="folio-item__caption">
-                        <p>This is a ~1000 line distributed key value store, with support for replication, multiple machines, and multiple drives per machine. Optimized for values between 1MB and 1GB. Inspired by SeaweedFS, but simple. Should scale to billions of files and petabytes of data.
-
+                        <p>
+                            Developed a scalable healthcare database system to improve data access and storage efficiency.
                         </p>
                     </div>
                 </div>
